--- a/src/main/resources/templates/addNote.html
+++ b/src/main/resources/templates/addNote.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css">
 </head>
 <body>
+<div th:insert="~{nav.html :: nav}"></div>
 <div class="container">
     <h1>Add Note</h1>
     <form method="post" th:action="@{/note/add}">
