--- a/src/main/resources/templates/editNote.html
+++ b/src/main/resources/templates/editNote.html
@@ -3,33 +3,34 @@
 <head>
     <meta charset="UTF-8">
     <title>Edit Note</title>
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css">
+    <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" rel="stylesheet">
 </head>
 <body>
+<div th:insert="~{nav.html :: nav}"></div>
 <div class="container">
     <h2>Edit Note</h2>
-    <form method="post" th:object="${note}" th:action="@{/note/edit}">
-        <input type="hidden" th:field="*{id}">
+    <form method="post" th:action="@{/note/edit}" th:object="${note}">
+        <input th:field="*{id}" type="hidden">
         <div class="form-group">
             <label for="titleInput">Title:</label>
-            <input type="text" class="form-control" id="titleInput" th:field="*{title}">
+            <input class="form-control" id="titleInput" th:field="*{title}" type="text">
         </div>
         <div class="form-group">
             <label for="contentInput">Content:</label>
             <textarea class="form-control" id="contentInput" rows="5" th:field="*{content}"></textarea>
         </div>
-        <button type="submit" class="btn btn-primary">Save</button>
-        <a href="/note/list" class="btn btn-secondary">Cancel</a>
+        <button class="btn btn-primary" type="submit">Save</button>
+        <a class="btn btn-secondary" href="/note/list">Cancel</a>
     </form>
 </div>
-<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
+<script crossorigin="anonymous"
         integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
-        crossorigin="anonymous"></script>
-<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.1/dist/umd/popper.min.js"
+        src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
+<script crossorigin="anonymous"
         integrity="sha384-XJdD5nAuz80p5r5+P4E7aFY0eCExJtkh4G4j/bhtH1xTKLoSg0LEQVEfrhTULZ7Q"
-        crossorigin="anonymous"></script>
-<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"
+        src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.1/dist/umd/popper.min.js"></script>
+<script crossorigin="anonymous"
         integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+hBQJo+Y6anLIZxnRHfV6U/20OzX7IuHQI6z5"
-        crossorigin="anonymous"></script>
+        src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"></script>
 </body>
 </html>
